Fixed spacing issue

--- a/css/cnx_LinkStyle.css
+++ b/css/cnx_LinkStyle.css
@@ -362,9 +362,18 @@ reasons or is being used to label clustered parts of the code*/
 }
 
 .gallery-grid {
+	column-gap: 1em;
 	display: inline-grid;
 	font-size: 16px;
-	gap: 1em;
+	grid-template-columns: auto auto;
+	justify-items: center;
+	width: auto;
+}
+
+.spon-gallery-grid {
+	column-gap: 1em;
+	display: inline-grid;
+	font-size: 16px;
 	grid-template-columns: auto auto auto auto;
 	justify-items: center;
 	width: auto;
@@ -383,8 +392,8 @@ reasons or is being used to label clustered parts of the code*/
 	font-family: "Open Sans";
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 25.6px;
-	min-height: 30px;
+	line-height: 1.6em;
+	min-height: 1.875em;
 	/*padding-left: 15px;
 	padding-right: 15px;*/
 	position: relative;
@@ -412,19 +421,19 @@ reasons or is being used to label clustered parts of the code*/
 	font-family: "Open Sans";
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 25.6px;
-	margin-block-end: 15px;
-	margin-block-start: 15px;
-	margin-bottom: 15px;
-	margin-inline-end: 15px;
-	margin-inline-start: 15px;
-	margin-left: 15px;
-	margin-right: 15px;
-	margin-top: 15px;
-	padding-bottom: 16px;
-	padding-left: 16px;
-	padding-right: 16px;
-	padding-top: 16px;
+	line-height: 1.6em;
+	margin-block-end: 0.9375em;
+	margin-block-start: 0.9375em;
+	margin-bottom: 0.9375em;
+	margin-inline-end: 0.9375em;
+	margin-inline-start: 0.9375em;
+	margin-left: 0.9375em;
+	margin-right: 0.9375em;
+	margin-top: 0.9375em;
+	padding-bottom: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 1em;
 	position: relative;
 	text-align: center;
 	text-size-adjust: 100%;
@@ -458,8 +467,8 @@ reasons or is being used to label clustered parts of the code*/
 	font-family: "Open Sans";
 	font-size: 16px;
 	font-weight: 400;
-	height: 186.531px;
-	line-height: 25.6px;
+	height: 11.6581875em;
+	line-height: 1.6em;
 	max-width: 100%;
 	overflow-clip-margin: content-box;
 	overflow-x: clip;
@@ -468,7 +477,7 @@ reasons or is being used to label clustered parts of the code*/
 	text-size-adjust: 100%;
 	text-transform: none;
 	vertical-align: middle;
-	width: 355px;
+	width: 22.1875em;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -490,8 +499,8 @@ reasons or is being used to label clustered parts of the code*/
 	font-family: "Open Sans";
 	font-size: 16px;
 	font-weight: 400;
-	height: 187px;
-	line-height: 25.6px;
+	height: 11.6875em;
+	line-height: 1.6em;
 	max-width: 100%;
 	opacity: 1;
 	overflow-clip-margin: content-box;
@@ -506,7 +515,7 @@ reasons or is being used to label clustered parts of the code*/
 	transition-property: opacity;
 	transition-timing-function: ease;
 	vertical-align: middle;
-	width: 187px;
+	width: 11.6875em;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -638,10 +647,10 @@ reasons or is being used to label clustered parts of the code*/
 	overflow-clip-margin: content-box;
 	overflow-x: clip;
 	overflow-y: clip;
-	padding-bottom: 0px;
-	padding-left: 0px;
-	padding-right: 0px;
-	padding-top: 0px;
+	padding-bottom: 0em;
+	padding-left: 0em;
+	padding-right: 0em;
+	padding-top: 0em;
 	text-size-adjust: 100%;
 	text-transform: none;
 	transition-behavior: normal;
@@ -973,7 +982,8 @@ reasons or is being used to label clustered parts of the code*/
 
 .s-t-text {
 	color: rgb(255, 255, 255);
-	padding-bottom: 50px;
+	font-size: 16px;
+	padding-bottom: 3.125em;
 	text-align: center;
 }
 
